tests/parser/tests/cases/should_fail/incomplete_list_pattern/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:1
1 |   [a := b;
  |   ^ here
  = note: encountered unclosed delimiter `[`, add a `]` after the inner expression
